--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.27.2",
+    "eleventy-plugin-error-overlay": "^1.0.0",
+    "html-minifier": "^4.0.0"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1"
   },
