--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,8 @@
     "axios": "^0.27.2",
     "eleventy-plugin-error-overlay": "^1.0.0",
     "html-minifier": "^4.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.1.4"
   }
 }
