--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx @11ty/eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "eleventy --serve & npx tailwindcss -i src/_assets/css/tailwind.css -c src/_assets/css/tailwind.config.js -o dist/_assets/css/main.css --watch",
+    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i src/_assets/css/tailwind.css -c src/_assets/css/tailwind.config.js -o dist/_assets/css/main.cs --minify"
   },
   "keywords": [],
   "author": "",
